--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.15.*",
+    "npm":"6.14.10"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@david.kucsai/react-pdf-table": "^0.3.0",
