--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "14.15.*",
-    "npm":"6.14.10"
+    "npm": "6.14.10"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
@@ -49,7 +49,8 @@
     "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "heroku-postbuild": "npm run install && npm run build"
   },
   "eslintConfig": {
     "extends": [
