--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://abdicom.herokuapp.com/",
   
   "engines": {
     "node": "14.15.*",
